Fix content overflow

--- a/SCSS/Notion like No Bullet Editor Mode.scss
+++ b/SCSS/Notion like No Bullet Editor Mode.scss
@@ -335,7 +335,6 @@
 			transition-timing-function: linear;
 			position: relative;
 			background-color: transparent;
-			left: var(--treenode-line-spacing);
 		}
 
 		// Sticky Top bar
